--- a/index.html
+++ b/index.html
@@ -145,23 +145,23 @@
       const pixData = {
         'COWBOY + FRITAS': {
           qrcode: 'cowboy-fritas.png',
-          key: 'pix-cowboy@seudominio.com'
+          key: '00020101021226800014br.gov.bcb.pix2558pix.delbank.com.br/v2/cob/vcharged5cedc90bd6e45b284ca9bf225204000053039865802BR5907DELBANK6007ARACAJU62070503***6304167A'
         },
         'EXPLOSION + FRITAS': {
           qrcode: 'explosion-fritas.png',
-          key: 'pix-explosion@seudominio.com'
+          key: '00020101021226800014br.gov.bcb.pix2558pix.delbank.com.br/v2/cob/vcharge4f78a211418545cdaa5dc59735204000053039865802BR5907DELBANK6007ARACAJU62070503***630495EC'
         },
         'MONSTER + FRITAS': {
           qrcode: 'monster-fritas.png',
-          key: 'pix-monster@seudominio.com'
+          key: '00020101021226800014br.gov.bcb.pix2558pix.delbank.com.br/v2/cob/vchargee3c4031a47ab46f4b1d75f8785204000053039865802BR5907DELBANK6007ARACAJU62070503***6304B59C'
         },
         'ONION': {
           qrcode: 'onion.png',
-          key: 'pix-onion@seudominio.com'
+          key: '00020101021226800014br.gov.bcb.pix2558pix.delbank.com.br/v2/cob/vcharge99e57084362b454c90c0214375204000053039865802BR5907DELBANK6007ARACAJU62070503***6304CA1D'
         },
         'PREMIUM + FRITAS': {
           qrcode: 'premium-fritas.png',
-          key: 'pix-premium@seudominio.com'
+          key: '00020101021226800014br.gov.bcb.pix2558pix.delbank.com.br/v2/cob/vchargec9a8088eea004302acd682e2a5204000053039865802BR5907DELBANK6007ARACAJU62070503***6304AAE2'
         }
       };
 
@@ -193,3 +193,4 @@
   </footer>
 </body>
 </html>
+
